@@ -1,0 +1,5 @@
+
+In alphabetical order:
+
+Koert Kuipers		for a patch adding raw byte support
+Murray Stokely		for several patches and helpful discussions		
